--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <div class="decoration">
     <img  class="image-1" src="images/watch.png" alt="">
     <img class="image-2" src="images/gradient1.png" alt="">
-    <h2 class="image-text">Awlays keep a positive 
+    <h2 class="image-text">Always keep a positive 
         mindset</h2>
         <button class="btn" id="button">Call Now
         </button>
