--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
         </button>
 </div>
     </main>
-    <footer class="footer-area">
+    <footer>
+        
+        <section>
+
+        </section>
 
     </footer>
 
