--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 
 <body>
@@ -28,7 +29,7 @@
             <div>
                 <h2 class="head-text">My failures of previous year</h2>
                 <p class="text-1">Contrary to popular belief, Lorem Ipsum is not
-                 simply random text. It has roots in a piece of
+                    simply random text. It has roots in a piece of
                     classical Latin literature from 45 BC, making it over
                     2000 years old. Richard McClintock</p>
                 <p class="text-2"><img class="checkmark" src="images/icons/checkmark.png" alt=""> Contrary to popular
@@ -46,43 +47,59 @@
         <section class="mid-area-2">
             <h2 class="head-text">My Plans</h2>
             <div class="plans">
-            <div>
-                <img src="images/icons/web.png" alt="">
-                <h3>Web Development</h3>
-                <h4 class="text-3">I want to start</h4>
-            </div>
-            <div>
-                <img src="images/icons/js.png" alt="">
-                <h3>Javascript</h3>
-                <h4 class="text-3">I want to start</h4>
-            </div>
+                <div>
+                    <img src="images/icons/web.png" alt="">
+                    <h3>Web Development</h3>
+                    <h4 class="text-3">I want to start</h4>
+                </div>
+                <div>
+                    <img src="images/icons/js.png" alt="">
+                    <h3>Javascript</h3>
+                    <h4 class="text-3">I want to start</h4>
+                </div>
 
-            <div>
-                <img src="images/icons/smoke.png" alt="">
-                <h3>Smoking Habit</h3>
-                <h4 class="text-3">I want to end</h4>
-            </div>
+                <div>
+                    <img src="images/icons/smoke.png" alt="">
+                    <h3>Smoking Habit</h3>
+                    <h4 class="text-3">I want to end</h4>
+                </div>
 
-            <div>
-                <img src="images/icons/ecom.png" alt="">
-                <h3>ecommerce</h3>
-                <h4 class="text-3">I want to develop</h4>
-        </div>
+                <div>
+                    <img src="images/icons/ecom.png" alt="">
+                    <h3>ecommerce</h3>
+                    <h4 class="text-3">I want to develop</h4>
+                </div>
         </section>
-<div class="decoration">
-    <img  class="image-1" src="images/watch.png" alt="">
-    <img class="image-2" src="images/gradient1.png" alt="">
-    <h2 class="image-text">Always keep a positive 
-        mindset</h2>
-        <button class="btn" id="button">Call Now
-        </button>
-</div>
+        <div class="decoration">
+            <img class="image-1" src="images/watch.png" alt="">
+            <img class="image-2" src="images/gradient1.png" alt="">
+            <h2 class="image-text">Always keep a positive
+                mindset</h2>
+            <button class="btn" id="button">Call Now
+            </button>
+        </div>
     </main>
     <footer>
+        <div>
+            <h2 class="head-text">My Plans</h2>
+            <p class="footer-text">There are many variations of passages of Lorem Ipsum
+                available, but the majority have suffered alteration in some
+                form, by injected humour, or randomised word</p>
+                <p>Email: info@gmail.com</p>
+                <p class="phone">Phone: +880 1810000000</p>
+                <img src="images/icons/fb.png" alt="">
+                <img src="images/icons/twitter.png" alt="">
+                <img src="images/icons/youtube.png" alt="">
+        </div>
+        <form action="">
+            <h2>Subscribe</h2>
+            <br>
+            <input type="email" placeholder="Enter Your Email">
+            <div class="right-footer">
+                <button class="btn" id="subscibe" type="submit">Subscribe</button>
+            </div>
+        </form>
         
-        <section>
-
-        </section>
 
     </footer>
 
