--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" type="image/x-icon" href="images/icons/web.png">
 </head>
 
 <body>
