--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
     </main>
     <footer>
         <div>
-            <h2 class="head-text">My Plans</h2>
+            <h2 class="head-text">Future</h2>
             <p class="footer-text">There are many variations of passages of Lorem Ipsum
                 available, but the majority have suffered alteration in some
                 form, by injected humour, or randomised word</p>
-                <p>Email: info@gmail.com</p>
-                <p class="phone">Phone: +880 1810000000</p>
-                <img src="images/icons/fb.png" alt="">
-                <img src="images/icons/twitter.png" alt="">
-                <img src="images/icons/youtube.png" alt="">
+            <p>Email: info@gmail.com</p>
+            <p class="phone">Phone: +880 1810000000</p>
+            <img src="images/icons/fb.png" alt="">
+            <img src="images/icons/twitter.png" alt="">
+            <img src="images/icons/youtube.png" alt="">
         </div>
         <form action="">
             <h2>Subscribe</h2>
@@ -100,7 +100,7 @@
                 <button class="btn" id="subscibe" type="submit">Subscribe</button>
             </div>
         </form>
-        
+
 
     </footer>
 
