--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
     </Header>
     <main>
         <section class="mid-area">
-            <img src="images/person.png" alt="">
+            <img src="images/person.png" alt="person">
             <div>
                 <h2 class="head-text">My failures of previous year</h2>
                 <p class="text-1">Contrary to popular belief, Lorem Ipsum is not
                     simply random text. It has roots in a piece of
                     classical Latin literature from 45 BC, making it over
                     2000 years old. Richard McClintock</p>
-                <p class="text-2"><img class="checkmark" src="images/icons/checkmark.png" alt=""> Contrary to popular
+                <p class="text-2"><img class="checkmark" src="images/icons/checkmark.png" alt="checkmark"> Contrary to popular
                     belief, is not simply.</p>
-                <p class="text-2"><img class="checkmark" src="images/icons/checkmark.png" alt=""> Contrary to popular
+                <p class="text-2"><img class="checkmark" src="images/icons/checkmark.png" alt="checkmark"> Contrary to popular
                     belief.</p>
-                <p class="text-2"><img class="checkmark" src="images/icons/checkmark.png" alt=""> Contrary to popular ,
+                <p class="text-2"><img class="checkmark" src="images/icons/checkmark.png" alt="checkmark"> Contrary to popular ,
                     is not simply.</p>
-                <p class="text-2"><img class="checkmark" src="images/icons/checkmark.png" alt=""> Contrary to popular
+                <p class="text-2"><img class="checkmark" src="images/icons/checkmark.png" alt="checkmark"> Contrary to popular
                     belief, is not simply.</p>
-                <p class="text-2"><img class="checkmark" src="images/icons/checkmark.png" alt=""> Contrary to popular
+                <p class="text-2"><img class="checkmark" src="images/icons/checkmark.png" alt="checkmark"> Contrary to popular
                     simply.</p>
             </div>
         </section>
@@ -49,31 +49,31 @@
             <h2 class="head-text">My Plans</h2>
             <div class="plans">
                 <div>
-                    <img src="images/icons/web.png" alt="">
+                    <img src="images/icons/web.png" alt="web development logo">
                     <h3>Web Development</h3>
                     <h4 class="text-3">I want to start</h4>
                 </div>
                 <div>
-                    <img src="images/icons/js.png" alt="">
+                    <img src="images/icons/js.png" alt="Javascript">
                     <h3>Javascript</h3>
                     <h4 class="text-3">I want to start</h4>
                 </div>
 
                 <div>
-                    <img src="images/icons/smoke.png" alt="">
+                    <img src="images/icons/smoke.png" alt="smoke">
                     <h3>Smoking Habit</h3>
                     <h4 class="text-3">I want to end</h4>
                 </div>
 
                 <div>
-                    <img src="images/icons/ecom.png" alt="">
+                    <img src="images/icons/ecom.png" alt="ecommerce">
                     <h3>ecommerce</h3>
                     <h4 class="text-3">I want to develop</h4>
                 </div>
         </section>
         <div class="decoration">
-            <img class="image-1" src="images/watch.png" alt="">
-            <img class="image-2" src="images/gradient1.png" alt="">
+            <img class="image-1" src="images/watch.png" alt="watch">
+            <img class="image-2" src="images/gradient1.png" alt="gradient">
             <h2 class="image-text">Always keep a positive
                 mindset</h2>
             <button class="btn" id="button">Call Now
@@ -89,8 +89,8 @@
             <p>Email: info@gmail.com</p>
             <p class="phone">Phone: +880 1810000000</p>
             <img src="images/icons/fb.png" alt="">
-            <img src="images/icons/twitter.png" alt="">
-            <img src="images/icons/youtube.png" alt="">
+            <img src="images/icons/twitter.png" alt="twitter">
+            <img src="images/icons/youtube.png" alt="facebook">
         </div>
         <form action="">
             <h2>Subscribe</h2>
